--- a/meet15a/application/views/edit_post.html
+++ b/meet15a/application/views/edit_post.html
@@ -1,12 +1,13 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<div class="container" style="border: none;">
-    <div class="form-container">
+<div class="container">
+    <h1>EDIT POST</h1>
         <form method="POST" action="{{ url_for('edit_post', post_id=post.id) }}" enctype="multipart/form-data">
             {{ form.hidden_tag() }}
-            <fieldset class="group-form">
-                <legend class="form-label">EDIT POST</legend>
+            <fieldset class="group-form" style="border: none;">
+                <!-- <legend class="form-label">EDIT POST</
+    <div class="form-container">legend> -->
 
                 <div class="group-form">
                     {{ form.caption.label(class="form-label") }}
